# polymarket-pipeline

./: .bruin.yml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
polymarket-pipeline/: README.md  pipeline.yml
polymarket-pipeline/assets/ingestion/: upload_to_gcs.py
polymarket-pipeline/assets/reports/: fct_daily_category_activity.asset.sql  fct_daily_category_concentration.asset.sql  fct_daily_expiry_bucket_liquidity.asset.sql  fct_daily_market_history.asset.sql  fct_spread_distribution.asset.sql  fct_spread_over_time.asset.sql
polymarket-pipeline/assets/staging/: fetch_markets.py  stg_markets.asset.sql  stg_orderbook.py  stg_price_changes.asset.sql
polymarket-pipeline/scripts/: check_parquet_files.py
terraform/: README.md  main.tf  startup-script.sh
